--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                     <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
+            <a href="/">WebStudio</a>
         </footer>
 
     </body>
