add lank adress

--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@
 
         <footer>
             <a href="/">WebStudio</a>
-            <address>г. Киев, пр-т Леси Украинки, 26</address>
+            <address>
+                <a href="https://goo.gl/maps/ViH7PqBd5oUtThd78" 
+                target="_blank"
+                rel="noopener noreferrer nofollow">г. Киев, пр-т Леси Украинки, 26</a>
+            </address>
             <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
